# dart-parser

./: .gitignore  pubspec.yaml
dart-parser-lalrpop/: Cargo.toml
dart-parser-lalrpop/src/: ast.rs  dart.lalrpop  dart_gen.lalrpop  main.rs  parser.rs
dart-parser-node/: Cargo.toml  index.d.ts  index.js  package.json  test.mjs
dart-parser-node/.github/workflows/: CI.yml
dart-parser-node/npm/darwin-arm64/: README.md  package.json
dart-parser-node/npm/darwin-x64/: README.md  package.json
dart-parser-node/npm/freebsd-x64/: README.md  package.json
dart-parser-node/npm/linux-x64-gnu/: README.md  package.json
dart-parser-node/npm/linux-x64-musl/: README.md  package.json
dart-parser-node/npm/win32-x64-msvc/: README.md  package.json
dart-parser-node/src/: lib.rs
dart-parser-pest/: Cargo.toml
dart-parser-pest/src/: ast.rs  dart.pest  lib.rs  main.rs  parser.rs
dart-parser-wasm/: Cargo.toml  LICENSE_MIT
dart-parser-wasm/src/: lib.rs
lib/: Dart.g  dartLangSpec.tex  lalrpop_grammar.dart  parse_grammar.dart  plaintext_grammar.dart  plaintext_grammar.txt
lib/.antlr/: Dart.interp  DartLexer.interp
lib/generated-antlr/: DartLexer.ts  DartListener.ts  DartParser.ts  DartVisitor.ts
lib/src/wasm/: dart_parser_wasm_bg.dart  wasm_interface.dart  wasm_interop_native.dart  wasm_interop_web.dart
lib/wasm/: dart_parser_wasm.dart  dart_parser_wasm.wasm  wasm.dart
test/: parser_test.dart
